# dhlab-sifi2000-lecture-2025

./: .gitignore  README.md  pyproject.toml
notebooks/: DHLAB_demo.ipynb  HTR_demo.ipynb  README.md  Undervisningsopplegg_HTR.ipynb
notebooks/data/: 00.txt  01.txt  02.txt  README.md
src/dhlab_sifi2000_lecture_2025/: download_data.py
