[project]
name = "dhlab-sifi2000-lecture-2025"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nasjonalbiblioteket - Seksjon for Språkbank og DH-lab"},
]
dependencies = ["datasets>=4.1.0", "transformers>=4.56.1", "pillow>=11.3.0", "httpx>=0.28.1", "torch>=2.8.0", "requests>=2.32.5", "jupyterlab>=4.4.7", "dhlab>=2.42.0", "scipy>=1.15.3"]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
